Fix: focus border not visible on toggle button.

--- a/public/color-schemes/dark.css
+++ b/public/color-schemes/dark.css
@@ -522,7 +522,7 @@ body {
   color: var(--text-color);
 }
 
-.rc-togglebutton:focus {
+.rc-togglebutton:focus-within .p-button {
   box-shadow: var(--focus-box-shadow);
 }
 
